# stocks

./: README.md  meson.build
data/: custom.css
src/: chart_funcs.cpp  chart_funcs.hpp  compare.cpp  compare.hpp  correlation.cpp  correlation.hpp  main.cpp  main_window.cpp  main_window.hpp  meson.build  model.cpp  pca.cpp  pca.hpp  table.cpp  table.hpp
src/ui/: compare.ui  correlation.ui  main_window.ui  pca.ui  table.ui
